# cloudys

./: .dockerignore  .env.example  .gitignore  API接口文档.md  README.md  docker-compose.dev.yml  docker-compose.vm.debug.yml  docker-compose.vm.yml  docker-compose.yml  pom.xml  start-all.bat  start-all.ps1  stop-all.bat  stop-all.ps1
docs/: DEPLOYMENT.md  (+7 more)
services/python-sidecar/: README.md  __init__.py  main.py  project_paths.py  pyproject.toml
services/python-sidecar/core/: classification_engine.py  config.py  model_container.py
services/python-sidecar/core/engine/: __init__.py
services/python-sidecar/core/engine/remote/: __init__.py  async_deepseek.py  deepseek.py  sse.py
services/python-sidecar/data/kb_indexes/: version.json
services/python-sidecar/data/kb_indexes/nfr/: default__vector_store.json  docstore.json  index_store.json
services/python-sidecar/routers/: chat.py  classification.py  conflict.py  kb.py  l4_generation.py  l4_validation.py  requirements_acquisition.py  traceability.py
services/python-sidecar/schemas/: chat.py  classification.py  conflict_report.py  inference.py  kb_schemas.py  l4_schemas.py  trace_output.py
services/python-sidecar/services/: audit_log_service.py  chat_service.py  classification_service.py  conflict_service.py  l4_generation_service.py  l4_validator_service.py  requirements_acquisition_service.py  traceability_service.py
services/python-sidecar/services/kb_service/: __init__.py  config.py  core.py  definitions.py
services/python-sidecar/tests/: test_fastapi_app.py  test_routes_contract.py  test_sidecar_contract.py
(+595 files in other folders)
