[project]
name = "cloudys-python-sidecar"
version = "0.1.0"
description = "Repo-local FastAPI Python sidecar for cloudys inference-service."
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "openai>=1.30.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.1",
    "python-json-logger>=2.0.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
